@@ -10,6 +10,7 @@ Nagios 3.x Change Log
   fix segfaults that were occuring on some systems
 * Added detection of Apache conf.d directory and 'make install-webconf' functionality
 * Configure script option bug fixes for cygwin and embedded perl
+* Added buffer stats and check statistics to performance information in extinfo CGI
 * Documentation updates
 
 
